# auto-readme

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
auto_readme/: __init__.py  analyzer.py  cli.py  llm.py  manifest.py  merger.py  validator.py
auto_readme/sections/: __init__.py  api_reference.py  installation.py  usage.py
tests/: test_analyzer.py  test_merger.py  test_validator.py
tests/fixtures/sample_project/: __init__.py  main.py  models.py  utils.py
web/backend/: main.py
web/frontend/: index.html  package-lock.json
web/frontend/src/: App.css  App.jsx  index.css
